# DeepEngine

./: .gitignore  .roadmap  CMakeLists.txt  README.md  imgui.ini  setup.ps1
animation/skeleton/: CMakeLists.txt  CryAnimation_animstatemachine_uber.cpp  IAnimationStateMachine.h
animation/statemachine/: AnimationStateMachine.cpp  AnimationStateMachine.h
core/: CMakeLists.txt  ECS.h  Profiler.cpp  Profiler.h
core/console/: CMakeLists.txt  Logger.cpp  Logger.h
core/jobs/: CMakeLists.txt  JobSystem.cpp  JobSystem.h
core/math/: CMakeLists.txt  Quat.h  Vec3.h  Vec4.h
core/memory/: Allocator.h  CMakeLists.txt
core/platform/: CMakeLists.txt  PlatformWindows.h  platform.h
editor/: AnimStateMachineAssetType.cpp  AnimStateMachineAssetType.h  AnimStateMachineEditor.cpp  AnimStateMachineEditor.h  CMakeLists.txt  GraphViewModel.cpp  GraphViewModel.h  GraphViewWidget.cpp  GraphViewWidget.h  NodeGraphRuntimeContext.cpp  NodeGraphRuntimeContext.h  ParametersWidget.cpp  ParametersWidget.h  PinItem.cpp  PinItem.h  PreviewWidget.cpp  PreviewWidget.h  StateNodeItem.cpp  StateNodeItem.h  StdAfx.h  TransitionConnection.cpp  TransitionConnection.h  editoranimstatemachine.waf_files  main.cpp  wscript
launcher/: CMakeLists.txt
launcher/src/: main.cpp
physics/: CMakeLists.txt  PhysicsLayers.h  PhysicsSystem.cpp  PhysicsSystem.h
render/: CMakeLists.txt  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  RenderSystem.cpp  RenderSystem.h  Terrain.cpp  Terrain.h
tests/: CMakeLists.txt  ecs_test.cpp  main.cpp
